# sdg_base

./: .gitignore  README.md  base_user_params.py  pyproject.toml  user_params.py
.github/workflows/: tests.yml
base_src/sdg_base_src/: __init__.py  sdg_base.py
src/sdg_base_src/: __init__.py  sdg_base.py
tests/: __init__.py  sdg_base_tests.py
