[project]
name = "sdg_base"
authors = [
    {name="Lucy Astley-Jones"},
    {name="Ed Cuss"},
]
description = "An abstract base class for Sustainable Development Goals"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "geopandas == 0.13.2",
    "matplotlib == 3.2.2",
    "numexpr==2.7.3",
    "numpy == 1.20.3",
    "openpyxl > 3.0.7",
    "pandas == 2.0.3",
    "python-dotenv",
    "shapely == 1.7.1",
    "tqdm",
    "typing"
]

[project.optional-dependencies]
lint = [
    "black<24",
    "ruff",
]

dev = [
    "sdg_base[lint]",
]

[tool.black]
line-length = 88

[tool.ruff]
extend-select = ["I", "W"]
line-length = 88
